--- a/Datos.ipynb
+++ b/Datos.ipynb
@@ -845,11 +845,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "bridal-senior",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rt  eluniversocom guillermo lasso afirma realizar recuento votos  cne debería proclamar primero resultados  \n",
+      "dice arauz mejor definan segundo puesto haciendo lucha almohadas  páreme mano zapatito cochinito \n",
+      "rt  ecuainm oficial  atencion  urgente  ecuador dijeel tal  acuerdo  ilegal ningún derecho  nadie autorizó a \n",
+      "así puede  payasada alzar vuelo mientras pueda deja ser opción  elecciones2021ec\n",
+      "rt  thaliafloresf  atención candidato presidencial  guillermolasso envió presidenta    cne   dianaatamaint  consejero \n",
+      "rt  ciudadanodoe independentista catalán pasa  vox  elecciones2021ec  eleccionescatalanas  eleccionscatalanes  elecciones14f\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in (df['clean_tweet']):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
