--- a/Datos.ipynb
+++ b/Datos.ipynb
@@ -845,43 +845,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "bridal-senior",
+   "execution_count": 48,
+   "id": "enclosed-georgia",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rt  eluniversocom guillermo lasso afirma realizar recuento votos  cne debería proclamar primero resultados  \n",
-      "dice arauz mejor definan segundo puesto haciendo lucha almohadas  páreme mano zapatito cochinito \n",
-      "rt  ecuainm oficial  atencion  urgente  ecuador dijeel tal  acuerdo  ilegal ningún derecho  nadie autorizó a \n",
-      "así puede  payasada alzar vuelo mientras pueda deja ser opción  elecciones2021ec\n",
-      "rt  thaliafloresf  atención candidato presidencial  guillermolasso envió presidenta    cne   dianaatamaint  consejero \n",
-      "rt  ciudadanodoe independentista catalán pasa  vox  elecciones2021ec  eleccionescatalanas  eleccionscatalanes  elecciones14f\n"
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
      ]
     }
    ],
    "source": [
-    "for i in (df['clean_tweet']):\n",
+    "for i in range (4):\n",
     "    print(i)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "coastal-soldier",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "valid-netscape",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
