--- a/Datos.ipynb
+++ b/Datos.ipynb
@@ -845,24 +845,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "enclosed-georgia",
+   "execution_count": 49,
+   "id": "prospective-leadership",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n"
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n"
      ]
     }
    ],
    "source": [
     "for i in range (4):\n",
-    "    print(i)"
+    "    print(i+4)"
    ]
   }
  ],
