Creación de carpetas V1 datos.csv, V2 datos.json

--- a/analisisV1.0/credenciales.ipynb
+++ b/analisisV1.0/credenciales.ipynb
@@ -9,11 +9,11 @@
    "source": [
     "#Credenciales del API Twitter\n",
     "\n",
-    "API_KEY = \"\"\n",
-    "API_SECRET_KEY = \"\"\n",
+    "API_KEY = \"bxBYmBdPQ9TSheLsKUlI8mMyv\"\n",
+    "API_SECRET_KEY = \"L0Fweb9Gite9k0u4ARAw85rtIFSyMLAlWWHPx1I5Djlmip9blB\"\n",
     "\n",
-    "ACCESS_TOKEN = \"\"\n",
-    "ACCESS_TOKEN_SECRET = \"\""
+    "ACCESS_TOKEN = \"256288155-ywRyb824HozGnPjMe0pRJ1tYPjeyXbv0BgEv9tSh\"\n",
+    "ACCESS_TOKEN_SECRET = \"1VqufviVoOWUesDgnbLNH3rI4FsavstHToGI2NzO3Nbtz\""
    ]
   }
  ],
