--- a/analisisV3.0/Analisis_Jupyter.ipynb
+++ b/analisisV3.0/Analisis_Jupyter.ipynb
@@ -301,6 +301,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "reverse-bridge",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfLasso['Tweet'] = dfLasso['Tweet'].astype(\"string\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "social-individual",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1001 entries, 0 to 1000\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   Unnamed: 0    1001 non-null   int64 \n",
+      " 1   created at    1001 non-null   object\n",
+      " 2   Usuario       1001 non-null   object\n",
+      " 3   Tweet         1001 non-null   string\n",
+      " 4   Lugar         38 non-null     object\n",
+      " 5   rtCount       1001 non-null   int64 \n",
+      " 6   pre-tweet     1001 non-null   object\n",
+      " 7   clean_tweet   1001 non-null   object\n",
+      " 8   FechaFormato  1001 non-null   object\n",
+      "dtypes: int64(2), object(6), string(1)\n",
+      "memory usage: 70.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfLasso.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "rising-angel",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfLasso.to_csv(\"Lasso.csv\") #tweetText and Date with format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "furnished-ethics",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1001 entries, 0 to 1000\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   Unnamed: 0    1001 non-null   int64 \n",
+      " 1   Unnamed: 0.1  1001 non-null   int64 \n",
+      " 2   created at    1001 non-null   object\n",
+      " 3   Usuario       1001 non-null   object\n",
+      " 4   Tweet         1001 non-null   object\n",
+      " 5   Lugar         38 non-null     object\n",
+      " 6   rtCount       1001 non-null   int64 \n",
+      " 7   pre-tweet     1001 non-null   object\n",
+      " 8   clean_tweet   1001 non-null   object\n",
+      " 9   FechaFormato  1001 non-null   object\n",
+      "dtypes: int64(3), object(7)\n",
+      "memory usage: 78.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfLasso = pd.read_csv(\"Lasso.csv\")\n",
+    "dfLasso.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "special-reporter",
    "metadata": {},
